<resources>
    <string name="app_name">DrupalCamp Spain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Speaker">Speakers</string>
    <string name="calendar_activity">Schedule</string>
    <string name="schedule">Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="favorites">Favorites</string>
    <string name="comunications">Communications</string>
    <string name="breakfast">Breakfast</string>
    <string name="assembly">Assembly</string>
    <string name="close_session">Close session</string>
    <string name="lunch">Lunch</string>
    <string name="share">Share</string>
    <string name="calendar">Schedule</string>
    <string name="nav_friday">Friday</string>
    <string name="nav_saturday">Saturday</string>
    <string name="nav_sunday">Sunday</string>
    <string name="sumary">Sumary</string>
    <string name="rate_session">Rate this session</string>
    <string name="lToken">token</string>
    <string name="token">Dhkc_C7RNrSQfJTmUrEYKXa1Ol2gT4aTpMeR2pXrF2w</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="interest_points">Point of interest</string>

    <string name="title_activity_interest_point">Points of Interest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
